Complete HTML Markup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,91 @@
 </head>
 
 <body>
+    <main class="l-main">
+        <!-- Home Section -->
+        <section class="section">
+            <div class="home bd-grid">
+                <div class="home__descrition">
+                    <h1 class="title">
+                        Stay Focused on <br>
+                        <span class="title--color">Mission 2022</span>
+                    </h1>
+                    <p class="home__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset. No duo populo animal noluisse, enim</p>
+                    <a href="#" class="btn-link">Explore Now</a>
+                    <a href="#" class="scroll-down">Scroll down to explore more about us</a>
+                </div>
+                <div class="home__img">
+                    <img src="./assets/images/person/person-2.png" alt="Person Image">
+                </div>
+            </div>
+        </section>
 
+        <!-- Mission Section -->
+        <section class="section">
+            <div class="mission">
+                <h2 class="mission__title">My Mission in 2022</h2>
+
+                <div class="mission__modules bd-grid">
+                    <div class="mission__module">
+                        <img src="./assets/images/illustrators/illustrator-1.png" alt="illustration image">
+                        <h3>Mission</h3>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit.</p>
+                    </div>
+
+                    <div class="mission__module">
+                        <img src="./assets/images/illustrators/illustrator-2.png" alt="illustration image">
+                        <h3>Vission</h3>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit.</p>
+                    </div>
+
+                    <div class="mission__module">
+                        <img src="./assets/images/illustrators/illustrator-3.png" alt="illustration image">
+                        <h3>Goals</h3>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Develop without limit Section -->
+        <section class="section">
+            <div class="develop bd-grid">
+                <div>
+                    <img src="./assets/images/pictures/coding.png" alt="Coding Image" class="develop__img">
+                </div>
+                <div class="develop__descrition">
+                    <h2 class="develop__title">Develop Without Limits</h2>
+                    <p class="develop__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                        fallideterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster
+                        pri,ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <a href="#" class="btn-link">Read The Documentation</a>
+                </div>
+            </div>
+        </section>
+
+        <!--=-= Community section =-=-->
+        <section class="section">
+            <div class="community bd-grid">
+                <div class="community__descrition">
+                    <h2 class="community__title">Know our Global Community</h2>
+                    <p class="community__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea
+                        eos quas expetendis scripserit, affert gubergren dissentias et cum.</a>
+                </div>
+                <div>
+                    <img src="./assets/images/pictures/coding.png" alt="Coding Image" class="community__img">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>Mission <span>2022</span></p>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 
 </html>
