add project image

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="section">
             <div class="develop bd-grid">
                 <div>
-                    <img src="./assets/images/pictures/coding.png" alt="Coding Image" class="develop__img">
+                    <img src="./assets/images/pictures/project.png" alt="Project Image" class="develop__img">
                 </div>
                 <div class="develop__descrition">
                     <h2 class="develop__title">Develop Without Limits</h2>
