Complete home section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </h1>
                     <p class="home__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                         deterruisset. No duo populo animal noluisse, enim</p>
-                    <a href="#" class="btn-link">Explore Now</a>
+                    <a href="#" class="btn-link btn-link--orange">Explore Now</a>
                     <a href="#" class="scroll-down">Scroll down to explore more about us</a>
                 </div>
                 <div class="home__img">
-                    <img src="./assets/images/person/person-2.png" alt="Person Image">
+                    <img src="./assets/images/person/person-1.png" alt="Person Image">
                 </div>
             </div>
         </section>
