add bd-grid class in mission section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Mission Section -->
         <section class="section">
-            <div class="mission">
+            <div class="mission bd-grid">
                 <h2 class="mission__title">My Mission in 2022</h2>
 
                 <div class="mission__modules bd-grid">
