--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="home__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                         deterruisset. No duo populo animal noluisse, enim</p>
                     <a href="#" class="btn-link btn-link--orange">Explore Now</a>
-                    <a href="#" class="scroll-down">Scroll down to explore more about us</a>
+                    <a href="#mission" class="scroll-down">Scroll down to explore more about us</a>
                 </div>
                 <div class="home__img">
                     <img src="./assets/images/person/person-1.png" alt="Person Image">
@@ -38,8 +38,8 @@
 
         <!-- Mission Section -->
         <section class="section">
-            <div class="mission bd-grid">
-                <h2 class="mission__title">My Mission in 2022</h2>
+            <div class="mission bd-grid" id="mission">
+                <h2 class="mission__title">My Mission in <span class="title--color">2022</span></h2>
 
                 <div class="mission__modules bd-grid">
                     <div class="mission__module">
