--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <section class="section">
             <div class="develop bd-grid">
                 <div>
-                    <img src="./assets/images/pictures/project.png" alt="Project Image" class="develop__img">
+                    <img src="./assets/images/pictures/coding.png" alt="Project Image" class="develop__img">
                 </div>
                 <div class="develop__descrition">
                     <h2 class="develop__title">Develop <br>Without Limits</h2>
-                    <p class="develop__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                        fallideterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster
+                    <p class="develop__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at fallid eam
+                        eterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster
                         pri,ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
-                    <a href="#" class="btn-link">Read The Documentation</a>
+                    <a href="#" class="btn-link btn-link--orange">Read The Documentation</a>
                 </div>
             </div>
         </section>
@@ -86,13 +86,12 @@
         <section class="section">
             <div class="community bd-grid">
                 <div class="community__descrition">
-                    <h2 class="community__title">Know our Global Community</h2>
-                    <p class="community__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                        deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea
-                        eos quas expetendis scripserit, affert gubergren dissentias et cum.</a>
+                    <h2 class="community__title">Know our <br> Global Community</h2>
+                    <p class="community__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <a href="#" class="btn-link btn-link--orange">Read The Documentation</a>
                 </div>
                 <div>
-                    <img src="./assets/images/pictures/coding.png" alt="Coding Image" class="community__img">
+                    <img src="./assets/images/pictures/project.png" alt="Coding Image" class="community__img">
                 </div>
             </div>
         </section>
