--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                         Stay Focused on <br>
                         <span class="title--color">Mission 2022</span>
                     </h1>
-                    <p class="home__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                        deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="home__text">
+                        Until the middle of this year, I will focus on web design, UI/UX design, and also a priority on
+                        mobile-first design. Then I will be a focus on front-end development.
+                    </p>
                     <a href="#" class="btn-link btn-link--orange">Explore Now</a>
                     <a href="#mission" class="scroll-down">Scroll down to explore more about us</a>
                 </div>
@@ -48,24 +50,36 @@
 
                 <div class="mission__modules bd-grid">
                     <div class="mission__module">
-                        <img src="./assets/images/illustrators/illustrator-1.png" alt="illustration image">
+                        <div class="module__img">
+                            <img src="./assets/images/illustrators/illustrator-1.png" alt="illustration image">
+                        </div>
                         <h3>Mission</h3>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit mollit.</p>
+                        <p>
+                            I want to be a web developer to create examples. I want to be in the top 5 in terms of
+                            knowledge in the web development sector.
+                        </p>
                     </div>
 
                     <div class="mission__module">
-                        <img src="./assets/images/illustrators/illustrator-2.png" alt="illustration image">
+                        <div class="module__img">
+                            <img src="./assets/images/illustrators/illustrator-2.png" alt="illustration image">
+                        </div>
                         <h3>Vission</h3>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit mollit.</p>
+                        <p>
+                            First I will learn web design using "HTML, CSS". Then I will learn frontend development by
+                            using JavaScript, ReacJS, and etc.
+                        </p>
                     </div>
 
                     <div class="mission__module">
-                        <img src="./assets/images/illustrators/illustrator-3.png" alt="illustration image">
+                        <div class="module__img">
+                            <img src="./assets/images/illustrators/illustrator-3.png" alt="illustration image">
+                        </div>
                         <h3>Goals</h3>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit mollit.</p>
+                        <p>
+                            My goal for the next 1 year is to become a skilled web designer as well as a junior frontend
+                            developer
+                        </p>
                     </div>
                 </div>
             </div>
@@ -79,9 +93,11 @@
                 </div>
                 <div class="develop__descrition">
                     <h2 class="develop__title">Develop <br>Without Limits</h2>
-                    <p class="develop__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at fallid eam
-                        eterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster
-                        pri,ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <p class="develop__text">
+                        It takes a lot of hard work to become a good web developer. Hard work is the source of
+                        happiness. If you want to learn something, you will face many obstacles and if you
+                        can move forward, you can do something good in life. So you will uncompromising hard work.
+                    </p>
                     <a href="#" class="btn-link btn-link--orange">Read The Documentation</a>
                 </div>
             </div>
@@ -92,9 +108,11 @@
             <div class="community bd-grid">
                 <div class="community__descrition">
                     <h2 class="community__title">Know our <br> Global Community</h2>
-                    <p class="community__text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                        deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea
-                        eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <p class="community__text">
+                        The importance of community is immense if you want to learn something or
+                        do any project. Because if the community is strong then any work can be done very easily. Which
+                        is difficult without a good community, so you have to adapt to the community.
+                    </p>
                     <a href="#" class="btn-link btn-link--orange">Read The Documentation</a>
                 </div>
                 <div>
@@ -110,11 +128,13 @@
                     <img src="./assets/images/illustrators/service03.png" alt="Service Area">
                 </div>
                 <div class="service__description">
-                    <h2 class="service__title">My clients know, that I always provide top-level <span
-                            class="title--color">services</span>
+                    <h2 class="service__title">
+                        My clients know, that I always provide top-level
+                        <span class="title--color">services</span>
                     </h2>
-                    <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In risus augue,
-                        facilisis blandit vulputate sed, euismod egestas ex. Ut ac tellus et velit luctus pellentesque.
+                    <p class="service__text">
+                        I always try or will try to give the best service to my client and company. All customers of my
+                        company will be happy to use my service. I will always give the best service.
                     </p>
                     <div class="service__list">
                         <div class="service__item">
@@ -150,7 +170,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <p class="footer__text">Mission <span class="footer__text--color">2022</span></p>
-        <p class="footer__copywrite">Hard work, Perseverance, and Determination for 2022</p>
+        <p class="footer__text--sub">Hard work, Perseverance, and Determination for 2022</p>
     </footer>
 </body>
 
